--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,6 +18,16 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  top:120px;
+  position:relative;
+}
+
+main {
+  height:1000px;
+  width: 90%;
+  margin:auto;
+  background-color: #f4f1ec;
 }
 
 /*
