add icons and avatars for users, change layout to fit screens properly

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,3 +13,14 @@
 span.last-name {
   font-weight: normal;
 }
+
+/* Breakpoint for desktop */
+@media only screen and (min-width: 1024px) {
+  .site-header {
+    width: 33.3%;
+    float: left;
+    margin:2em;
+    top:180px;
+    position:fixed;
+  }
+}
