--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -35,3 +35,9 @@ button.compose {
   border: none;
   outline: none;
 }
+
+@media only screen and (min-width: 1024px) {
+  nav {
+    background-color: #4056A1;
+  }
+}
